CAY-1654 Can't switch DataSource Factory on certain projects
CAY-1656 cayenne generate extra data in xml model when change DataNode factory
CAY-1657 Expression: in-memory comparison requires persistent to be in the same context as exp parameters to match
CAY-1662 @Auditable and @AuditableChild annotations should support 'ignoredProperties' parameter and exclude changes to runtime relationships

Bug Fixes Since 3.1M3:

CAY-1477 Modeler: Better validation for erroneous horizontal inheritance mapping
CAY-1513 Deadlock in PoolManager
CAY-1623 [PATCH] PersistentObjectList.setValue does not work
CAY-1624 [PATCH] PersistentObjectHolder throws NPE is object is transient - not in an ObjectContext
CAY-1627 CayenneModeler: collection types for to-many relationships are not saved
CAY-1628 ClassCastException when using java.util.Set or java.util.Map as collection type for to-many relationship
CAY-1631 Oracle - passing blobs as stored procedure parameters
CAY-1632 CayenneModeler: flattened relationship paths are not fully displayed

----------------------------------
Release: 3.1 M3
Date: 
----------------------------------
Changes/New Features Since 3.1M2:

CAY-943 Support multiple cayenne.xml files in the project
CAY-1266 Joint prefetches with fetch limit and offset do not work on Oracle
CAY-1461 CayenneModeler: remove ScopeMVC dependency - ObjRelationshipInfoDialog
CAY-1556 Add path construction feature to make constructing paths from constants easier for queries and orderings
CAY-1525 CharType: don't trim spaces on the left
CAY-1537 Implement ObjectContext local caches as NestedQueryCache over the shared cache
CAY-1544 Remove jdk1.6 module from Cayenne sources
CAY-1545 cayenne-lifecycle Referenceable handler refactoring
CAY-1547 cayenne-lifecycle: support for setting UuidRelationships
CAY-1549 Migrate BatchQueryBuilderFactory to DI
CAY-1553 cayenne-lifecycle: @SortWeight annotation 
CAY-1573 QueryLogger to DI JdbcEventLogger migration